Add live clock to navigation menu

--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -25,6 +25,9 @@
             </NavLink>
         </div>
     </nav>
+    <div class="clock-container px-3">
+        <ClockInfo />
+    </div>
 </div>
 
 @code {
