--- a/Layout/NavMenu.razor.css
+++ b/Layout/NavMenu.razor.css
@@ -65,6 +65,13 @@
     color: white;
 }
 
+.clock-info {
+    color: #d7d7d7;
+    font-size: 0.8rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
 @media (min-width: 641px) {
     .navbar-toggler {
         display: none;
