Make clock info text white

--- a/Layout/NavMenu.razor.css
+++ b/Layout/NavMenu.razor.css
@@ -66,7 +66,7 @@
 }
 
 .clock-info {
-    color: #d7d7d7;
+    color: white;
     font-size: 0.8rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
